--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="5dp"
-    android:background="#FFFFFF"
+    android:background="@drawable/black_back"
   tools:context=".MainActivity">
 
 
@@ -17,14 +17,14 @@
 
 
 <ImageView
-        android:layout_width="180dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:scaleType="centerInside"
         android:id="@+id/imageView"
-        android:src="@drawable/logoizzi" />
+        android:src="@drawable/circulovicky" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -123,12 +123,13 @@
         android:layout_below="@+id/linearLayout"
         android:id="@+id/textoo"
         android:layout_centerHorizontal="true"
-        android:textColor="#000"
-        android:layout_marginTop="50dp"
+        android:textColor="#fff"
+        android:layout_marginTop="70dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:text="¿Olvidaste tu contraseña?"
         android:gravity="center"
+        android:textSize="16sp"
         android:layout_height="wrap_content" />
     <TextView
         android:layout_width="wrap_content"
@@ -140,6 +141,8 @@
         android:textStyle="bold"
         android:clickable="true"
         android:onClick="registro"
+        android:textSize="16sp"
+
         android:gravity="center"
         android:layout_height="wrap_content" />
 
@@ -160,7 +163,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Ingresar"
                 android:textColor="#ffffff"
                 android:id="@+id/textView3"
