--- a/app/src/main/res/layout/activity_registro_paso3.xml
+++ b/app/src/main/res/layout/activity_registro_paso3.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    android:background="@drawable/black_back"
     tools:context="telecom.televisa.com.izzi.RegistroPaso3">
     <ImageView
         android:layout_width="180dp"
@@ -19,7 +19,7 @@
         android:layout_marginTop="15dp"
         android:textStyle="bold"
         android:text="Éxito :)"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:id="@+id/textView"
         android:textSize="17sp"
         android:layout_alignParentTop="true"
@@ -36,7 +36,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="Hemos enviado un correo electrónico a :"
-            android:textColor="#000"
+            android:textColor="#fff"
             android:id="@+id/textView2"
             android:textSize="16sp"
             android:layout_alignParentTop="true"
@@ -48,7 +48,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="Hemos enviado un correo electrónico a :"
-            android:textColor="#000"
+            android:textColor="#fff"
             android:id="@+id/email"
             android:textSize="16sp"
             android:layout_alignParentTop="true"
@@ -61,7 +61,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="Por favor revisa tu bandeja de entrada"
-            android:textColor="#000"
+            android:textColor="#fff"
 
             android:textSize="16sp"
             android:layout_alignParentTop="true"
