--- a/app/src/main/res/drawable/trjetacuadro.xml
+++ b/app/src/main/res/drawable/trjetacuadro.xml
@@ -10,6 +10,6 @@
     <!-- Here is the corner radius -->
     <stroke
         android:width="1dp"
-        android:color="#dfdfdf"></stroke>
+        android:color="#b1b1b1"></stroke>
 
 </shape>
