--- a/app/src/main/res/layout/activity_medios_de_pago.xml
+++ b/app/src/main/res/layout/activity_medios_de_pago.xml
@@ -1,280 +1,70 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     tools:context="telecom.televisa.com.izzi.MediosDePagoActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/vista"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="#ffffff">
+        android:orientation="vertical">
     <include layout="@layout/headerextra" />
+</LinearLayout>
+    <RelativeLayout
+        android:background="@drawable/tvknit"
 
-
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:background="#fff"
-            android:layout_marginTop="5dp"
-            android:padding="1dp"
-            android:layout_height="50dp">
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:orientation="horizontal"
-                android:layout_height="fill_parent">
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_weight=".3333333"
-                    android:layout_height="fill_parent">
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:orientation="vertical"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="2dp"
-                        android:background="#fff"
-                        >
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:textColor="#000"
-                            android:textSize="11sp"
-                            android:gravity="center"
-                            android:text="Mes de facturación"
-                            />
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="fill_parent"
-                            android:gravity="center"
-                            android:textColor="#000"
-                            android:textSize="13sp"
-                            android:id="@+id/fechaTextMonth"
-                            android:text="Junio"
-                            />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignParentBottom="true"
-                        android:background="#00C1B5"></LinearLayout>
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_weight=".3333333"
-                    android:layout_height="fill_parent">
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:background="#fff"
-                        android:layout_marginTop="5dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textSize="11sp"
-                            android:id="@+id/leyenda1Text"
-                            android:textColor="#000"
-                            android:text="Pagar antes de"
-                            />
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="fill_parent"
-                            android:gravity="center"
-                            android:textColor="#000"
-                            android:textSize="12sp"
-                            android:id="@+id/fechaText"
-                            android:text="Junio"
-                            />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignParentBottom="true"
-                        android:background="#D60270"></LinearLayout>
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_weight=".3333333"
-                    android:layout_height="fill_parent">
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:background="#fff"
-                        android:layout_marginTop="5dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textSize="11sp"
-                            android:textColor="#000"
-                            android:text="Total a pagar"
-                            />
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="fill_parent"
-                            android:gravity="center"
-                            android:textColor="#000"
-                            android:textSize="13sp"
-                            android:id="@+id/totalText"
-                            android:text="$0.00"
-                            />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignParentBottom="true"
-                        android:background="#FCD116"></LinearLayout>
-                </RelativeLayout>
-            </LinearLayout>
-        </RelativeLayout>
-
-
+        android:layout_marginTop="70dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="270dp"
+        android:layout_height="200dp">
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_height="90dp"
+            android:layout_width="100dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="60dp"
+            android:layout_marginBottom="45dp"
+            android:layout_height="70dp"
             android:id="@+id/codebar"
             />
             <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
+            android:textColor="#b1b1b1"
             android:id="@+id/codetext"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="80dp"
+            android:layout_marginBottom="35dp"
+            android:layout_marginRight="0dp"
             android:text="Estas son tus tarjetas registradas"
             android:textSize="13sp"/>
-
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_gravity="center"
-    android:orientation="horizontal"
-    android:layout_marginTop="5dp"
-    android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight=".5"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:layout_gravity="right"
-            android:gravity="right"
-            android:text="Teléfono: "
-            android:textStyle="bold"
-            android:textSize="13sp"/>
+    </RelativeLayout>
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight=".5"
-        android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:layout_gravity="left"
-        android:gravity="left"
-        android:id="@+id/tel"
-        android:textSize="13sp"/>
-</LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight=".5"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_gravity="right"
-                android:gravity="right"
-                android:text="Cuenta: "
-                android:textStyle="bold"
-                android:textSize="13sp"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight=".5"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_gravity="left"
-                android:gravity="left"
-                android:id="@+id/cuenta"
-                android:textSize="13sp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight=".5"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_gravity="right"
-                android:gravity="right"
-                android:text="Referencia: "
-                android:textStyle="bold"
-                android:textSize="13sp"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight=".5"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:layout_gravity="left"
-                android:gravity="left"
-                android:id="@+id/ref"
-                android:textSize="13sp"/>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:text="Con este código puedes pagar en tiendas izzi y en tiendas de Grupo Walmart."
+        android:textColor="#b1b1b1"
         android:layout_alignParentBottom="true"
-
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="10dp"
-            android:text="Con este código puedes pagar en Tiendas izzi y en tiendas de Grupo Walmart."
-            android:textStyle="bold"
-            android:textSize="15sp"/>
+        android:layout_marginBottom="250dp"
+        android:gravity="center_horizontal"
+        android:textSize="18sp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#33b1b1b1"
+        android:layout_alignParentBottom="true">
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_height="45dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:id="@+id/lastButton"
-            android:clickable="true"
-            android:onClick="showLugares"
-            android:background="@drawable/brounded_corners">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_centerInParent="true"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:text="Lugares de pago"
-                    android:textColor="#fff"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="15sp"
-                    android:gravity="center"
-                    android:layout_centerHorizontal="true" />
-            </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:background="#000"
+            android:layout_alignParentBottom="true">
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/pinkclose"
+                android:clickable="true"
+                android:onClick="closeView"
+                android:layout_height="30dp" />
         </RelativeLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
