--- a/app/src/main/res/layout/activity_recupera_pass.xml
+++ b/app/src/main/res/layout/activity_recupera_pass.xml
@@ -1,20 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    android:background="@drawable/black_back"
     tools:context="telecom.televisa.com.izzi.RecuperaPass">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:id="@+id/hcontainer"
-        android:layout_height="40dp"
-        android:background="#fff">
+        android:layout_height="40dp">
         <TextView
             android:id="@+id/h_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="visible"
             android:text="Servicios contratados"
-            android:textColor="#000"
+            android:textColor="#fff"
             android:textSize="18dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
@@ -42,7 +41,7 @@
     <LinearLayout android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:orientation="vertical"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="160dp"
         >
         <TextView
             android:layout_width="fill_parent"
@@ -51,7 +50,8 @@
             android:layout_gravity="center"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:textColor="#000"
+            android:textColor="#fff"
+            android:textSize="16sp"
             android:gravity="center"/>
         <RelativeLayout
             android:layout_width="fill_parent"
