--- a/app/src/main/res/layout/activity_registro_main_activity.xml
+++ b/app/src/main/res/layout/activity_registro_main_activity.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="5dp"
-    android:background="#fff"
+    android:background="@drawable/black_back"
     tools:context="telecom.televisa.com.izzi.Registro_main_activity">
 
     <ImageView
@@ -31,7 +31,7 @@
         android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:text="Crear cuenta"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:id="@+id/textView"
         android:textSize="17sp"
         android:layout_alignParentTop="true"
