--- a/app/src/main/res/layout/card_list_item_pay.xml
+++ b/app/src/main/res/layout/card_list_item_pay.xml
@@ -1,116 +1,85 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="fill_parent"
-    android:background="#fff"
-    android:layout_height="140dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:background="#22b1b1b1"
+    android:paddingTop="1dp"
+    android:layout_height="50dp">
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:background="#55dfdfdf"
-        android:layout_height="fill_parent">
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:background="#fff"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:id="@+id/remove"
+        android:gravity="center"
+        android:layout_gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_height="fill_parent">
+        android:background="#f00"
+        android:clickable="true"
+        android:layout_alignParentRight="true"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Eliminar"
+            android:textColor="#fff"
+            android:textSize="17sp"
+            android:layout_gravity="center"
+            android:gravity="center"/>
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="27dp"
-            android:layout_height="27dp"
-            android:orientation="vertical"
-            android:id="@+id/radio"
-            android:gravity="center_vertical"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/radiooff"
-            android:layout_marginLeft="20dp"
-            >
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:visibility="gone"
-                android:background="@drawable/roval"
-                android:id="@+id/radioon"
-                android:orientation="vertical"
-                android:layout_margin="5dp"></LinearLayout>
-            </LinearLayout>
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_marginLeft="85dp"
-        android:layout_marginRight="85dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/cardbgrd"
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:background="#111111"
+    android:id="@+id/movinglayout"
+    android:layout_height="50dp">
+
+    <LinearLayout
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:visibility="gone"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/rcheck"
+        android:id="@+id/radioon"
         android:orientation="vertical"
-        android:layout_height="fill_parent">
-        <ImageView
-            android:layout_width="25dp"
-            android:src="@drawable/chip"
-
-            android:layout_marginLeft="8dp"
-            android:layout_centerVertical="true"
-            android:layout_height="20dp" />
-        <ImageView
-            android:layout_width="30dp"
-            android:src="@drawable/tori1"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_height="45dp" />
+        android:layout_marginRight="25dp"
+        android:layout_margin="5dp"></LinearLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent">
         <ImageView
             android:layout_width="40dp"
             android:src="@drawable/amex"
             android:id="@+id/crdimg"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
             android:layout_height="40dp" />
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/vendortjt"
+            android:visibility="gone"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textColor="#000"
-            android:layout_marginBottom="25dp"
-            android:textSize="13sp"
+            android:textColor="#D60270"
+            android:textSize="17sp"
             android:layout_alignParentBottom="true"
             android:text="MasterCard / Vigente"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/tjtnumber"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="15dp"
             android:layout_alignParentRight="true"
             android:gravity="center_vertical"
             android:layout_centerVertical="true"
-            android:textSize="13sp"
+            android:textSize="17sp"
+            android:textStyle="bold"
             android:layout_centerInParent="true"
-
-            android:textColor="#000"
+            android:textColor="#D60270"
             android:text="●●●● ●●●● ●●●● 5478"/>
-    </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="30dp"
-            android:layout_height="25dp"
-            android:id="@+id/remove"
-            android:gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal"
-            android:background="@drawable/remove2"
-            android:clickable="true"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
-            >
-        </LinearLayout>
-    </RelativeLayout>
-    </LinearLayout>
+
 </LinearLayout>
+    </RelativeLayout>
+    </RelativeLayout>
