--- a/app/src/main/res/layout/headerextra.xml
+++ b/app/src/main/res/layout/headerextra.xml
@@ -11,7 +11,7 @@
             android:layout_width="fill_parent"
             android:id="@+id/hcontainer"
             android:layout_height="46dp"
-            android:background="#fff">
+            >
 
 
             <TextView
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 android:text="Servicios contratados"
-                android:textColor="#000"
+                android:textColor="#fff"
                 android:textSize="17dp"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true" />
@@ -48,15 +48,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_centerVertical="true"
                 android:src="@drawable/info" />
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:background="@drawable/lineascopy"
-                android:visibility="visible"
-                android:orientation="vertical"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_alignParentBottom="true"
-                android:layout_height="1dp" />
+
         </RelativeLayout>
 
     </LinearLayout>
