--- a/app/src/main/res/layout/activity_edo_cuenta.xml
+++ b/app/src/main/res/layout/activity_edo_cuenta.xml
@@ -8,62 +8,52 @@
         android:id="@+id/vista"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#ffffff">
+        android:background="@drawable/black_back">
     <include layout="@layout/headerextra" />
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="fill_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/estadoc"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/izzi_turquesa70"
+            android:padding="11dp"
+            >
+
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight=".5"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="fill_parent"
-                    android:textColor="#fff"
+                    android:textColor="@color/izzi_text_color"
                     android:textSize="17sp"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:layout_marginTop="22dp"
                     android:textStyle="bold"
                     android:text="JUNIO"
                     android:id="@+id/mes"
                     android:layout_height="wrap_content" />
+
+
+
                 <TextView
-                    android:layout_width="fill_parent"
-                    android:textColor="#fff"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/izzi_text_color"
                     android:textSize="17sp"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:layout_marginTop="5dp"
                     android:text="Periodo del:"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:textColor="#fff"
-                    android:textSize="16sp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="Periodo del:"
+                    android:layout_marginLeft="3dp"
                     android:id="@+id/periodo"
-                    android:layout_height="wrap_content" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight=".5"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    />
 
                 </LinearLayout>
+
                 </LinearLayout>
         </RelativeLayout>
 
@@ -81,22 +71,24 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="#99eeeeee">
+                    android:background="@color/izzi_gris_dd1">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="Pagar antes de "
 
                         android:gravity="center_vertical"
-                        android:layout_weight=".5"/>
+                        android:layout_weight=".5"
+
+                        />
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/limite"
                         android:text="30 Diciembre 2015"
@@ -108,11 +100,11 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
@@ -122,7 +114,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/anterior"
                         android:text="30 Diciembre 2015"
@@ -134,11 +126,11 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="#99eeeeee">
+                    android:background="@color/izzi_gris_dd1">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
@@ -148,7 +140,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:gravity="center"
                         android:layout_weight=".5"/>
@@ -157,12 +149,11 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
-                    android:orientation="horizontal"
-                    android:background="#fff">
+                    android:orientation="horizontal">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="Saldo anterior "
@@ -172,7 +163,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/paqP"
                         android:gravity="center"
@@ -184,11 +175,11 @@
                     android:layout_height="60dp"
                     android:id="@+id/tel"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="Telefonía"
@@ -197,7 +188,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/telTot"
                         android:gravity="center"
@@ -209,11 +200,11 @@
                     android:layout_height="60dp"
                     android:id="@+id/inter"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                   >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="Internet"
@@ -222,7 +213,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/intTot"
                         android:gravity="center"
@@ -234,11 +225,11 @@
                     android:layout_height="60dp"
                     android:id="@+id/tv"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="Televisión"
@@ -247,7 +238,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/tvTot"
                         android:gravity="center"
@@ -259,11 +250,11 @@
                     android:layout_height="60dp"
                     android:id="@+id/veo"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="VEO"
@@ -272,7 +263,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/veoTot"
                         android:gravity="center"
@@ -284,11 +275,11 @@
                     android:layout_height="60dp"
                     android:id="@+id/otros"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="Otros cargos"
@@ -297,7 +288,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/otrosTot"
                         android:gravity="center"
@@ -309,11 +300,11 @@
                     android:layout_height="60dp"
                     android:id="@+id/bon"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
                         android:text="Bonificaciones"
@@ -322,7 +313,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/bonTot"
                         android:gravity="center"
@@ -333,11 +324,11 @@
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="#99eeeeee">
+                    android:background="@color/izzi_gris_dd1">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
@@ -347,7 +338,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/st"
                         android:gravity="center"
@@ -358,11 +349,11 @@
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
                     android:orientation="horizontal"
-                    android:background="#fff">
+                    >
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
@@ -372,7 +363,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/tp"
                         android:gravity="center"
@@ -387,16 +378,16 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:id="@+id/infop"
-                    android:textColor="#00C1B5"/>
+                    android:textColor="@color/izzi_turquesa"/>
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal"
-                    android:background="#99eeeeee">
+                    android:background="@color/izzi_gris_dd1">
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginLeft="15dp"
@@ -406,7 +397,7 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="fill_parent"
-                        android:textColor="#000"
+                        android:textColor="@color/izzi_text_color"
                         android:textSize="14dp"
                         android:id="@+id/total"
                         android:gravity="center"
@@ -435,7 +426,7 @@
             android:layout_weight=".5"
             android:layout_height="fill_parent"
             android:layout_centerInParent="true"
-            android:background="#cc00C1B5"
+            android:background="@color/izzi_button1"
             android:clickable="true"
             android:onClick="aclaraciones"
             android:orientation="horizontal">
@@ -451,7 +442,7 @@
                 android:id="@+id/aclara"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:textColor="#ffffff"
+                android:textColor="@color/izzi_text_color"
                 />
         </LinearLayout>
             <LinearLayout
@@ -459,7 +450,7 @@
                 android:layout_weight=".5"
                 android:layout_height="fill_parent"
                 android:layout_centerInParent="true"
-                android:background="#ccD60270"
+                android:background="@color/izzi_button2"
                 android:clickable="true"
                 android:onClick="sendBill"
                 android:orientation="horizontal">
@@ -473,7 +464,7 @@
                     android:id="@+id/edocuenta"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/izzi_text_color"
                     />
             </LinearLayout>
         </LinearLayout>
