--- a/app/src/main/res/layout/activity_legales.xml
+++ b/app/src/main/res/layout/activity_legales.xml
@@ -1,17 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/black_back"
     tools:context="telecom.televisa.com.izzi.LegalesActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/vista"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#ffffff">
+        >
         <include layout="@layout/headerextra" />
+
+
+
         <LinearLayout
             android:layout_width="fill_parent"
-            android:background="#ffffff"
+            android:background="#000000"
             android:orientation="vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
